@@ -50,6 +50,7 @@ This version has not been released yet.
    a filter. It affected continuous pull replications with a filter.
  * Fix use of OAuth with VHosts and URL rewriting.
  * OAuth secrets can now be stored in the users system database.
+ * Allow persistent authentication cookies.
 
 Version 1.1.2
 -------------
